--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cosmos-delegation-js",
   "version": "1.0.0",
   "description": "Node API for Cosmos Delegation using Ledger Nano S/X",
-  "main": "./src/index.js",
+  "main": "./dist/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zondax/cosmos-delegation-js.git"
@@ -46,6 +46,7 @@
   },
   "moduleDirectories": [
     "node_modules",
-    "src"
+    "src",
+    "dist"
   ]
 }
