--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@babel/runtime": "^7.4.4",
     "axios": "^0.18.0",
     "big.js": "^5.2.2",
-    "ledger-cosmos-js": "https://github.com/cosmos/ledger-cosmos-js",
+    "ledger-cosmos-js": "https://github.com/TokenUnion/ledger-cosmos-js.git",
     "secp256k1": "3.6.2"
   },
   "devDependencies": {
